Updated german language files.

--- a/contrib/translations/de/de_DE.lng
+++ b/contrib/translations/de/de_DE.lng
@@ -584,7 +584,7 @@ Aktuell eingehängte Laufwerke:
 
 .
 :PROGRAM_MOUNT_NOT_FORMATTED
-Laufwerk nicht formatiert. Bitte formatiteren,
+Laufwerk nicht formatiert. Bitte formatieren,
 bevor darauf zugegriffen wird.
 
 .
