--- a/CHANGELOG
+++ b/CHANGELOG
@@ -58,6 +58,19 @@ NEXT
     files appear out of thin air by intercepting INT 13h floppy disk
     I/O and then asking MS-DOS to run something from it. Hack for
     "DS_BLISS" demo. (joncampbell123).
+  - Added Added sharp-bilinear Direct3D shader (RibShark)
+  - Pass output dimensions to Direct3D shaders (RibShark)
+  - Fixed BPB of floppy images made by IMGMAKE command (maron2000)
+  - Fixed timestamp of volume label changed by LABEL command (maron2000)
+  - Fixed pathname issues when mounting differencial VHD images (maxpat78)
+  - Corrected relative/absolute track offset in subchannel data for
+    CD-ROM images (RibShark).
+  - Fixed particular dead keys were not working to input characters
+    with diacritics (maron2000).
+  - Enabled "Edit and Continue" option for debug builds of Visual Studio
+    Intel builds (aybe).
+  - Updated libchdr to latest (treloret).
+  - Fixed icon in Gnome dock bar (FredBezies).
   - add option "[dos] automount drive directories" for Windows builds,
     this will mount existing drive directories from C to Y drive (aybe).
   - fix off-center and off-screen window after entering the
