--- a/_release_notes/2024.07.01.md
+++ b/_release_notes/2024.07.01.md
@@ -1,6 +1,6 @@
 ---
 slug: 2024.07.01
-date: "July 1, 2024"
+date: July 1, 2024
 ---
 
 - Correct Hercules InColor memory emulation. Read and write planar
