--- a/_release_notes/20241001.md
+++ b/_release_notes/20241001.md
@@ -44,3 +44,4 @@ date: October 1, 2024
     - retain 'show advanced options' state throughout session
 - SVN r4483: Fix compilation in Visual Studio 2008 (Allofich)
 - DOSBox Staging: Decouple CMS and OPL emulations (Allofich)
+- Fixed reading NEC specific character font data.(nanshiki)
