--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 Next
+  - Added an option not to pause after host program execution is 
+    completed (maron2000)
+  - Fixed corrupted display when loading language files at launch
+    (maron2000)
   - Fixed Z Drive path expansion to be case insensitive (maron2000)
 
 2024.10.01
