Fix fullscreen mode not responding when launched in TTF mode (Windows)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 Next
+  - Fixed fullscreen mode not responding when launched in TTF mode 
+    in Windows (maron2000)
   - Fixed crashes when changing floppies mounted by drive numbers on
     a booted guest OS (maron2000)
   - Fixed launching host programs with white spaces in path (Windows)
