--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 Next
+  - Fixed build failure with libc++ 19 (@DimitryAndric)
   - Fixed crashes when changing floppies mounted by drive numbers on
     a booted guest OS (maron2000)
   - Fixed launching host programs with white spaces in path (Windows)
